board click changes color of square and fixed number of mines are invisibly placed on board

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,15 @@
   font-size: 20pt;
   font-weight: bold;
 }
+
+.revealed-square {
+  display: grid;
+  justify-content: center;
+  background-color: rgba(127, 255, 212, 0.909);
+  border-radius: 10px;
+  padding: 10px;
+}
+
 .board-square {
   display: grid;
   justify-content: center;
